--- a/AboutMeInteractive-Starter/app/src/main/res/values/strings.xml
+++ b/AboutMeInteractive-Starter/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
 <resources>
     <string name="app_name">AboutMe</string>
     <string name="name">Aleks Haecky</string>
+    <string name="nickname">Enter Your Nickname!</string>
     <string name="yellow_star">Yellow star</string>
     <string name="bio">Hi, my name is Aleks.
 \n\nI love fish.
@@ -28,5 +29,6 @@
 \n\nOnce, when I was camping in Canada, and very hungry, I even caught a large salmon with my hands.
 \n\nI\'ll be happy to teach you how to make your own aquarium.
 \nYou should ask someone else about fishing, though.\n\n</string>
+    <string name="done">DONE</string>
 
 </resources>
